fixed getusermedia on ios

--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -1,4 +1,5 @@
 .main {
+    border: 10px solid red;
     .display {
         position: absolute;
         z-index: 99999999999;
